src/test/contracts/negative/interpreter_tests/test_failure2.mligo
let test = Assert.assert false
